[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ephys-analysis"
version = "0.1.0"
description = "GUI tool for electrophysiology data analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "Unknown"}]
dependencies = [
    "numpy",
    "pandas",
    "pyabf",
    "tk",
]

[project.scripts]
ephys-analysis = "EphysAnalysis.APP:main"
